      different regexes in use.
  * checks/fields:
    + [ADB] Ignore non-dependency fields when considering whether a
      versioned dependency is satisfied by the perl core packages.
      Based on a patch by Niko Tyni.  (Closes: #500720)
  * checks/infofiles:
    + [FL] Use $known_shells_regex from common_data.
  * checks/menus:
    + [FL] Use $known_shells_regex from common_data.
  * check/scripts:
    + [FL] Use $known_shells_regex from common_data.
  
  * collection/objdump-info:
    + [ADB] Only use readelf to emulate objdump if objdump returned "file
      format not recognized".  In cases where the objdump output was "invalid
      operation", the output of etch's readelf is not particularly useful
      and it's easier to simply let the checks scripts handle the objdump
      output.
  
  * debian/control:
    + [FL] Add dependency on libipc-run-perl for Lintian::Command.

  * frontend/lintian:
    + [FL] Convert to use Lintian::Output.
    + [CW] Add jaunty as an allowable distribution for Ubuntu, and remove
      the EOLed edgy and feisty.
  
  * lib/Lintian/Output:
    + [FL] New module to bundle output methods.
  * lib/Tags/{ColonSeparated,LetterQualifier}.pm:
    + [FL] Move to lib/Lintian/Output and convert to subclasses of
      Lintian::Output.
  * lib/Lintian/Output/XML.pm:
    + [FL] New experimental output format.
  * lib/Lintian/Command:
    + [FL] New utility module as a replacement for Pipeline. Provides
      a convenient wrapper around IPC::Run.
  
  * lib/Lab.pm:
    + [FL] Convert to use Lintian::Output.
  * lib/Tags.pm:
    + [FL] Convert to use Lintian::Output.
  * lib/Pipeline.pm:
    + [FL] Remove, replaced by Lintian::Command.
  * lib/Util.pm:
    + [FL] Convert to use Lintian::Output.
    + [FL] Add some new utility functions: delete_dir copy_dir gunzip_file
      touch_file.

 -- Frank Lichtenheld <djpig@debian.org>  Sun, 28 Sep 2008 10:35:47 +0200

lintian (2.0.0) unstable; urgency=low
