@@ -27,6 +27,7 @@ W: scripts source: ancient-standards-version 3.2.1 (current is 3.8.0)
 W: scripts source: binary-arch-rules-but-pkg-is-arch-indep
 W: scripts source: debian-watch-file-uses-deprecated-sf-redirector-method
 W: scripts source: dpatch-missing-description 02_i_dont_have_a_description.patch
+W: scripts source: dpatch-missing-description 04_i_dont_have_a_description_either.patch
 W: scripts source: maintainer-script-lacks-debhelper-token debian/postinst
 W: scripts source: maintainer-script-lacks-debhelper-token debian/postrm
 W: scripts source: package-uses-deprecated-debhelper-compat-version 1
